# Game2d

./: .gitignore  CMakeLists.txt  README.md  game2d.workspace  main.cpp  test_box2d.cpp
Engine/: Engine.cbp
Engine/include/: DrawingObject.hpp  Engine.hpp  EventInputSystem.hpp  ItemsFactory.hpp  Logger.hpp  MainLoop.hpp  ObjectBase.hpp  Player.hpp  ResourceManager.hpp  SceneManager.hpp  SceneNode.hpp  SelectableDrawingObject.hpp  SpriteAnimation.hpp  Texture.hpp  UpdateEventDto.hpp  Window.hpp
Engine/include/ObjectsDrawing/: BackgroundObject.hpp  Font.hpp  ObjectDrawingBase.hpp  Player.hpp  PlayerGraphic.hpp  PlayerOld.hpp  SpriteAnimationDrawing.hpp  TextureDrawing.hpp
Engine/include/ObjectsDrawing/Inventory/: Inventory.hpp  InventoryItem.hpp
Engine/include/ObjectsDrawing/Utils/: DrawDebugEngine.hpp  PhysicDraw.hpp  ShowFps.hpp
Engine/include/Utils/: FPoint.hpp  FRectangle.hpp  IPoint.hpp  IRectangle.hpp  Point.hpp  Rectangle.hpp  SceneManagerFpsCounterBase.hpp
Engine/include/Utils/debugEngine/: DebugEngineBase.hpp  TraceEngineUtils.hpp
Engine/include/Utils/fileSystem/: FileSystemUtils.hpp
Engine/include/Utils/logger/: Logger.hpp  LoggerFactory.hpp
Engine/include/gameManagers/: WeaponsManager.hpp
Engine/include/gameObjects/: AnimationObject.hpp  Bound.hpp  GameObjectBase.hpp  GameObjectsFactory.hpp  Player.hpp
Engine/include/gameObjects/weapons/: Akm.hpp  WeaponBase.hpp
Engine/include/physics/: BasePhysicBody.hpp  BoundPhysic.hpp  CollisionDetector.hpp  PlayerPhysic.hpp
Engine/include/render/: Camera.hpp  Render.hpp
Engine/include/resourceManagers/: BaseResourceManager.hpp  MapResourceManager.hpp  ScriptResourceManager.hpp  SpriteAnimationResourceManager.hpp  TexturesResourceManager.hpp
Engine/include/scene/: SceneController.hpp
Engine/include/scriptBinding/: BaseScriptBinding.hpp  BoundScript.hpp  PlayerScript.hpp  Script.hpp
Engine/include/scriptBinding/weapons/: AkmScript.hpp
Engine/include/services/: InitService.hpp  NotificationServices.hpp  WidowService.hpp
Engine/include/settings/: SystemSettings.hpp
Engine/src/: DrawingObject.cpp  EventInputSystem.cpp  Inventory.cpp  ItemsFactory.cpp  Logger.cpp  MainLoop.cpp  Player.cpp  ResourceManager.cpp  SceneManager.cpp  SceneNode.cpp  SelectableDrawingObject.cpp  SpriteAnimation.cpp  Texture.cpp  UpdateEventDto.cpp  Window.cpp
Engine/src/ObjectsDrawing/: BackgroundObject.cpp  Font.cpp  Player.cpp  PlayerGraphic.cpp  PlayerOld.cpp  SpriteAnimationDrawing.cpp  TextureDrawing.cpp
Engine/src/ObjectsDrawing/Inventory/: Inventory.cpp  InventoryItem.cpp
Engine/src/ObjectsDrawing/Utils/: DrawDebugEngine.cpp  PhysicDraw.cpp  ShowFps.cpp
Engine/src/ObjectsDrawing/Utils/debugEngine/: TraceEngineUtils.cpp
Engine/src/Utils/: FRectangle.cpp  IPoint.cpp  IRectangle.cpp
Engine/src/gameObjects/: AnimationObject.cpp  Bound.cpp  GameObjectsFactory.cpp  Player.cpp
Engine/src/gameObjects/weapons/: Akm.cpp
Engine/src/physics/: BasePhysicBody.cpp  BoundPhysic.cpp  CollisionDetector.cpp  PlayerPhysic.cpp
Engine/src/render/: Camera.cpp  Render.cpp
Engine/src/resourceManagers/: MapResourceManager.cpp  ScriptResourceManager.cpp  SpriteAnimationResourceManager.cpp  TexturesResourceManager.cpp
Engine/src/scene/: SceneController.cpp
Engine/src/scriptBinding/: BaseScriptBinding.cpp  BoundScript.cpp  PlayerScript.cpp  Script.cpp
Engine/src/scriptBinding/weapons/: AkmScript.cpp
Engine/src/services/: InitService.cpp  NotificationServices.cpp  WidowService.cpp
Engine/src/utils/logger/: Logger.cpp
Game/: Game.cbp  main.cpp
Game/include/: GameLoop.h
Game/include/DrawingItems/: ItemDrawing.hpp
Game/src/: GameLoop.cpp
Game/src/DrawingItems/: ItemDrawing.cpp
include/DrawingItems/: ItemDrawing.hpp
src/DrawingItems/: ItemDrawing.cpp
test/OpenGl/rectangle_shaders/: Simple.fragment.glsl  Simple.vertex.glsl  test_openGl_3.cpp
test/sdl2_box2d/: sdl2_box2d.cpp
